--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-native": "^0.63.4",
+    "react-native-phone-call": "^1.0.9",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
