--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
     "path": "^0.12.7",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-elastic-carousel": "^0.11.0",
     "react-native": "^0.63.4",
     "react-native-phone-call": "^1.0.9",
     "react-scripts": "4.0.0",
+    "reactjs-popup": "^2.0.4",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
